--- a/build.yaml
+++ b/build.yaml
@@ -7,8 +7,10 @@
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
-# include:
-#   - board: bdn9_rev2
+include:
+  - board: pillbug
+    shield: notte
+    
 #   - board: nice_nano_v2
 #     shield: reviung41
 #   - board: nice_nano_v2
