--- a/build.yaml
+++ b/build.yaml
@@ -7,9 +7,9 @@
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
-#include:
-#  - board: pillbug
-#    shield: notte
+include:
+  - board: pillbug
+    shield: notte
     
 #   - board: nice_nano_v2
 #     shield: reviung41
